--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </header>
       <div class="main-div">
         <section class="main-section1">
-          <img src="/img/tony.jpg" alt="bn" class="main-img" />
+          <img src="./img/tony.jpg" alt="bn" class="main-img" />
           <h1 class="main-h1">Baiel Nasirdin uulu</h1>
         </section>
         <section class="main-section2">
@@ -53,13 +53,13 @@
       </div>
       <div class="photes">
         <section>
-          <img src="/img/bmw.JPG" alt="bmw" width="500px" id="photo" />
+          <img src="./img/bmw.JPG" alt="bmw" width="500px" id="photo" />
           <br />
           <a href="#" id="a">BMW</a>
         </section>
         <section>
           <img
-            src="/img/phone.jpg"
+            src="./img/phone.jpg"
             alt="phone"
             width="500px"
             height="375px"
@@ -72,7 +72,7 @@
       <div class="notebook">
         <section>
           <img
-            src="/img/notebook.PNG"
+            src="./img/notebook.PNG"
             alt="notebook"
             width="500px"
             id="photo"
